--- a/shadama.html
+++ b/shadama.html
@@ -14,6 +14,7 @@
 <script>
 var shadama;
 onload = function() {
+  debugger
   shadama = ShadamaFactory(null, 2, null, "13-Ribbons.shadama", true);
 }
 </script>
